--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-2" data-youtube="" data-facebook="" data-twitter="google" data-google="" data-posts="4" style="background-color: rgb(1, 38, 56); padding-top: 0px; padding-bottom: 40px;">
+<section class="mbr-social-feed loading" id="feed-2" data-youtube="" data-facebook="" data-twitter="afo_8" data-google="" data-posts="4" style="background-color: rgb(1, 38, 56); padding-top: 0px; padding-bottom: 40px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
