--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/8fc48342-35f8-4270-9b0a-371b84debe63-128x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">qip</a>
+                        <a href="https://rebrand.ly/qip" class="navbar-logo"><img src="assets/images/8fc48342-35f8-4270-9b0a-371b84debe63-128x128.png" alt="Mobirise"></a>
+                        <a class="navbar-caption" href="https://rebrand.ly/qip">qip</a>
                     </div>
 
                 </div>
